--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
 			<artifactId>ontop-owlapi</artifactId>
 			<version>3.0.0-beta-2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>it.unibz.inf.ontop</groupId>
 			<artifactId>ontop-system-sql-owlapi</artifactId>
@@ -35,17 +34,18 @@
 			<artifactId>ontop-semantic-index</artifactId>
 			<version>3.0.0-beta-2</version>
 		</dependency>
-
-		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.1-901.jdbc4</version>
-		</dependency>
 		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>apache-jena-libs</artifactId>
 			<version>3.1.1</version>
 			<type>pom</type>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 </project>
