--- a/resources/use_cases/smart_home/sspn-ql-rdf.properties
+++ b/resources/use_cases/smart_home/sspn-ql-rdf.properties
@@ -1,6 +1,6 @@
-#Mon Dec 11 10:37:38 EET 2017
-jdbc.url=
-jdbc.driver=
-jdbc.user=
-jdbc.name=1b3ff094-ea1b-44a4-888e-f857ae98b534
-jdbc.password=
+#Mon Apr 16 19:52:13 EET 2018
+jdbc.url=jdbc\:h2\:~/smart_home
+jdbc.driver=org.h2.Driver
+jdbc.user=iot
+jdbc.name=ee02cefa-e249-4afc-8188-bc5673c86d80
+jdbc.password=iot
