--- a/config.properties
+++ b/config.properties
@@ -3,3 +3,4 @@ obdaFile=/Users/emre/Documents/workspace/PolicyOBDA/resources/use_cases/smart_ho
 obdaPropertiesFile=/Users/emre/Documents/workspace/PolicyOBDA/resources/use_cases/smart_home/sspn-ql-rdf.properties
 ontologyIri=http://cs.ozyegin.edu.tr/muratsensoy/2015/03/sspn-ql#
 policyFile=/Users/emre/Documents/workspace/PolicyOBDA/resources/use_cases/smart_home/policies.xml
+smartHomeDB=/Users/emre/Documents/workspace/PolicyOBDA/resources/use_cases/smart_home/h2.sql
