minor fixes. improved the example to work with a planner

--- a/resources/use_cases/smart_home/sspn-ql-rdf.properties
+++ b/resources/use_cases/smart_home/sspn-ql-rdf.properties
@@ -1,6 +1,6 @@
-#Wed Apr 18 16:10:49 EET 2018
-jdbc.url=jdbc\:h2\:~/smart_home
+#Thu Apr 19 20:44:09 EET 2018
+jdbc.url=jdbc\:h2\:mem\:smart_home
 jdbc.driver=org.h2.Driver
 jdbc.user=iot
-jdbc.name=643b1297-2e3b-4d4f-a536-a8fd6054b213
+jdbc.name=ba5f0204-535a-4514-85f3-259452c7abe2
 jdbc.password=iot
