--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,11 @@
-owlFile=./resources/use_cases/smart_home/sspn-ql-rdf.owl
-obdaFile=./resources/use_cases/smart_home/sspn-ql-rdf.obda
-obdaPropertiesFile=./resources/use_cases/smart_home/sspn-ql-rdf.properties
+owlFile=resources/use_cases/smart_home/sspn-ql-rdf.owl
+obdaFile=resources/use_cases/smart_home/sspn-ql-rdf.obda
+obdaPropertiesFile=resources/use_cases/smart_home/sspn-ql-rdf.properties
 ontologyIri=http://cs.ozyegin.edu.tr/muratsensoy/2015/03/sspn-ql#
-policyFile=./resources/use_cases/smart_home/policies.xml
-plannerDomain=./resources/use_cases/smart_home/domain.pddl
-plannerProblem=./resources/use_cases/smart_home/problem.pddl
-plannerOutput=./resources/use_cases/smart_home/output.txt
-planner=/Users/emre/Documents/workspace/PolicyOBDA/planner/seq-sat-lama/
-smartHomeDB=./resources/use_cases/smart_home/h2.sql
+policyFile=resources/use_cases/smart_home/policies.xml
+plannerDomain=resources/use_cases/smart_home/domain.pddl
+plannerProblem=resources/use_cases/smart_home/problem.pddl
+plannerOutput=planner/fastdownward/sas_plan
+planner=planner/fastdownward/fast-downward.py
+plannerCommand=--search "lazy_greedy([ff()], preferred=[ff()])"
+smartHomeDB=resources/use_cases/smart_home/h2.sql
