--- a/config.properties
+++ b/config.properties
@@ -3,9 +3,9 @@ obdaFile=resources/use_cases/smart_home/sspn-ql-rdf.obda
 obdaPropertiesFile=resources/use_cases/smart_home/sspn-ql-rdf.properties
 ontologyIri=http://cs.ozyegin.edu.tr/muratsensoy/2015/03/sspn-ql#
 policyFile=resources/use_cases/smart_home/policies.xml
-plannerDomain=resources/use_cases/smart_home/domain.pddl
-plannerProblem=resources/use_cases/smart_home/problem.pddl
+plannerDomain=planner/fastdownward/domain.pddl
+plannerProblem=planner/fastdownward/problem.pddl
 plannerOutput=planner/fastdownward/sas_plan
-planner=planner/fastdownward/fast-downward.py
-plannerCommand=--search "lazy_greedy([ff()], preferred=[ff()])"
+plannerDir=planner/fastdownward/
+plannerCommand=fast-downward.py domain.pddl problem.pddl --search "lazy_greedy([ff()], preferred=[ff()])"
 smartHomeDB=resources/use_cases/smart_home/h2.sql
