data federation tutorial setup done

--- a/resources/use_cases/mine/mine-federation.properties
+++ b/resources/use_cases/mine/mine-federation.properties
@@ -1,6 +1,6 @@
-#Fri Mar 16 13:05:22 EET 2018
-jdbc.url=jdbc\:teiid\:iot_mine@mm\://localhost\:31000
+#Sat Apr 28 09:58:51 EET 2018
+jdbc.url=jdbc\:teiid\:SmartMine@mm\://localhost\:31000
 jdbc.driver=org.teiid.jdbc.TeiidDriver
-jdbc.user=iot
-jdbc.name=3cfffa52-b6ff-47a7-b767-fcc9ffb54ca1
+jdbc.user=iotuser
+jdbc.name=ef1d5512-418e-4d80-8f04-11188a642f76
 jdbc.password=iot
