--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="resources/jars/teiid-10.2.1-jdbc.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
