--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,17 @@
 			<version>3.1.1</version>
 			<type>pom</type>
 		</dependency>
-
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.197</version>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.teiid</groupId>
+			<artifactId>teiid</artifactId>
+			<classifier>jdbc</classifier>
+			<version>10.2.1</version>
 		</dependency>
 	</dependencies>
 </project>
