--- a/config.properties
+++ b/config.properties
@@ -1,12 +1,11 @@
-owlFile=resources/use_cases/mine/mine-federation.owl
-obdaFile=resources/use_cases/mine/mine-federation.obda
-obdaPropertiesFile=resources/use_cases/mine/mine-federation.properties
-ontologyIri=https://faculty.ozyegin.edu.tr/muratsensoy/mine-ontology#
-policyFile=resources/use_cases/mine/policies.xml
+owlFile=resources/use_cases/smart_home/sspn-ql-rdf.owl
+obdaFile=resources/use_cases/smart_home/sspn-ql-rdf.obda
+obdaPropertiesFile=resources/use_cases/smart_home/sspn-ql-rdf.properties
+ontologyIri=http://cs.ozyegin.edu.tr/muratsensoy/2015/03/sspn-ql#
+policyFile=resources/use_cases/smart_home/policies.xml
 plannerDomain=planner/fastdownward/domain.pddl
 plannerProblem=planner/fastdownward/problem.pddl
 plannerOutput=planner/fastdownward/sas_plan
 plannerDir=planner/fastdownward/
 plannerCommand=fast-downward.py domain.pddl problem.pddl --search "lazy_greedy([ff()], preferred=[ff()])"
-mineDB=resources/use_cases/mine/schema.sql
-mineInstances=resources/use_cases/mine/instances.sql
+smartHomeDB=resources/use_cases/smart_home/h2.sql
